# almond-demo

./: 235.bundle.js  Cargo.toml  bundle.js  bundle.wasm  package.json  style.scss  webpack.config.js
.github/workflows/: check.yml  deploy.yml
src/: app.rs
static/: index.html
