[package]
authors = ["Luke Chu <lukewchu@outlook.com>"]
edition = "2018"
name = "almond-demo"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
almond = "0.2.0"
log = "0.4"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
wasm-bindgen = "0.2.58"
wasm-logger = "0.2"
wee_alloc = {version = "0.4.4", optional = true}
yew = {git = "https://github.com/yewstack/yew", rev = "2c60d59"}
yew-functional = {git = "https://github.com/yewstack/yew", rev = "2c60d59"}

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
features = [
  "KeyboardEvent",
]
version = "0.3.4"
